# doogie_robot

./: LICENSE  README.md
doogie_bringup/: CMakeLists.txt  package.xml
doogie_bringup/include/doogie_bringup/: doogie_hardware.hpp
doogie_bringup/include/doogie_drivers/: doogie_motors_driver.hpp
doogie_bringup/launch/: doogie_bringup.launch  robot_bringup.launch
doogie_bringup/src/: doogie_base.cpp  doogie_control_node.cpp  doogie_hardware.cpp  ir_sensors_node.cpp
doogie_drivers/: CMakeLists.txt  package.xml
doogie_drivers/config/: params.yaml
doogie_drivers/include/doogie_drivers/: ads1115_driver.hpp  doogie_motors_driver.hpp  ir_sensor_driver.hpp  quadrature_encoder_driver.hpp
doogie_drivers/launch/: ir_sensor_node.launch  ir_sensors_calibration.launch
doogie_drivers/src/: ads1115_driver.cpp  doogie_motors_driver.cpp  ir_sensor_driver.cpp  ir_sensors_node.cpp  quadrature_encoder_driver.cpp
doogie_drivers/test/: calibration.cpp  step_response.cpp
doogie_robot/: CMakeLists.txt  package.xml
