<?xml version="1.0"?>
<package format="2">
  <name>doogie_bringup</name>
  <version>0.0.0</version>
  <description>The doogie_bringup package</description>

  <maintainer email="mateus@todo.todo">mateus</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>doogie_drivers</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>doogie_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>doogie_drivers</exec_depend>

  <export></export>
</package>
