<?xml version="1.0"?>
<package format="2">
  <name>doogie_bringup</name>
  <version>0.0.0</version>
  <description>The doogie_bringup package</description>

  <maintainer email="mateus@todo.todo">mateus</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>doogie_drivers</depend>
  <depend>control_toolbox</depend>

  <exec_depend>doogie_control</exec_depend>

  <export></export>
</package>
