<?xml version="1.0"?>
<package format="2">
  <name>doogie_drivers</name>
  <version>0.0.0</version>
  <description>Doogie Mouse Robot drivers package</description>

  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>

  <license>Apache 2.0</license>

  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_msgs</depend>

  <export></export>
</package>
